fix: low contrast issue in moving text and changed section to div due to no heading

--- a/styles.css
+++ b/styles.css
@@ -229,7 +229,7 @@ img-text-box h4 {
   position: sticky;
   text-align: center;
   font-size: 2rem;
-  color: var(--mid-grey-blue);
+  color: var(--dark-grey-blue);
 }
 
 img.person {
